--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -64,7 +64,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 										<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></dd></div>
 									<?php } else if ($_filter->getVar() == 'universal_categories') {
 									?>
-                                        <div class="open-close cate-open-close">
+                                        <div class="cate-open-close">
                                         <a class="opener" href="#">Categories</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categorie(s): </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
@@ -82,7 +82,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 										<dd <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>" <?php if (($current_category_id != '17') && ($current_category_id != '59')) { ?> style=""<?php }?>><?php echo $_filter->getHtml() ?></dd>
 									<?php } else if ($_filter->getVar() == 'acc_phone_model') {
 									?>
-                                        <div class="open-close cate-open-close">
+                                        <div class="cate-open-close">
                                         <a class="opener" href="#">Phone Models</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Phone Model(s): </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
@@ -99,13 +99,13 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                                     <?php }
 									else if ($_filter->getVar() == 'acc_notebook_material') {
 									?>
-                                        <div class="open-close cate-open-close">
+                                        <div class="cate-open-close">
                                         <a class="opener" href="#">Material</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Material: </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
 									<?php } else if ($_filter->getVar() == 'universal_categories') {
 									?>
-                                        <div class="open-close cate-open-close">
+                                        <div class="cate-open-close">
                                         <a class="opener" href="#">Categories</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
