--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5099,11 +5099,14 @@ textarea {
     font: 10px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
     display: none;
 }
-#fme_filters_list .cate-open-close .slide li{display: block;}
+#fme_filters_list .cate-open-close .slide li{
+    display: block;
+    padding: 0;
+}
 #fme_filters_list .cate-open-close li a {
     display: block;
     color: #666;
-    padding: 5px 10px;
+    padding: 5px 10px !important;
 }
 #fme_filters_list .cate-open-close li .fme_layered_attribute_selected_MOTIVATIONAL,
 #fme_filters_list .cate-open-close li a:hover {
