--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -65,7 +65,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 									<?php } else if ($_filter->getVar() == 'universal_categories') {
 									?>
                                         <div class="cate-open-close">
-                                        <a class="opener" href="#">Categories</a>
+                                        <a class="opener" href="javascript:void(0)">Categories</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categorie(s): </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
                                     <?php }
@@ -83,7 +83,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 									<?php } else if ($_filter->getVar() == 'acc_phone_model') {
 									?>
                                         <div class="cate-open-close">
-                                        <a class="opener" href="#">Phone Models</a>
+                                        <a class="opener" href="javascript:void(0)">Phone Models</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Phone Model(s): </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
 									<?php } else if ($_filter->getVar() == 'acc_notebook_color') {
@@ -100,13 +100,13 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 									else if ($_filter->getVar() == 'acc_notebook_material') {
 									?>
                                         <div class="cate-open-close">
-                                        <a class="opener" href="#">Material</a>
+                                        <a class="opener" href="javascript:void(0)">Material</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Material: </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
 									<?php } else if ($_filter->getVar() == 'universal_categories') {
 									?>
                                         <div class="cate-open-close">
-                                        <a class="opener" href="#">Categories</a>
+                                        <a class="opener" href="javascript:void(0)">Categories</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
 									<?php }
