--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -65,7 +65,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 									<?php } else if ($_filter->getVar() == 'universal_categories') {
 									?>
                                         <div class="cate-open-close">
-                                        <a class="opener" href="#">Categories</a>
+                                        <a class="opener" href="#">Search By Design Categories</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categorie(s): </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
                                     <?php }
@@ -106,7 +106,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 									<?php } else if ($_filter->getVar() == 'universal_categories') {
 									?>
                                         <div class="cate-open-close">
-                                        <a class="opener" href="#">Categories</a>
+                                        <a class="opener" href="#">Search By Design Categories</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
 									<?php }
@@ -116,7 +116,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
                         <?php //if ($state[1] AND $this->bNeedClearAll())://disabled clear all option 
                               //if(!($current_category_p_id == '5')){
 ?>
-                        <div class="actions fme_layered_clear_all" id="fme_layered_clear_all_btn" <?php if (($current_category_id != '17') && ($current_category_id != '59')) { ?> style=""<?php }?>><a class="fme_layered_clearall" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('Clear All') ?></a></div>            
+                        <div class="actions fme_layered_clear_all" id="fme_layered_clear_all_btn" <?php if (($current_category_id != '17') && ($current_category_id != '59')) { ?> style=""<?php }?>><a class="fme_layered_clearall" style="font-size:24px" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('Clear All') ?></a></div>            
                         <?php //} //endif ?>
 
                     </dl>
