--- a/app/design/frontend/base/default/template/catalog/product/view/options/type/select.phtml
+++ b/app/design/frontend/base/default/template/catalog/product/view/options/type/select.phtml
@@ -30,11 +30,13 @@
 <dt><label<?php if ($_option->getIsRequire()) echo ' class="required"' ?>><?php if ($_option->getIsRequire()) echo '<em>*</em>' ?><?php echo  $this->escapeHtml($_option->getTitle()) ?></label></dt>
 <dd<?php if ($_option->decoratedIsLast){?> class="last"<?php }?>>
     <div class="input-box">
+    	<span class="fake-select">
         <?php echo $this->getValuesHtml() ?>
         <?php if ($_option->getIsRequire()): ?>
             <?php if ($_option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_RADIO || $_option->getType() == Mage_Catalog_Model_Product_Option::OPTION_TYPE_CHECKBOX): ?>
                 <span id="options-<?php echo $_option->getId() ?>-container"></span>
             <?php endif; ?>
         <?php endif;?>
+        </span>
     </div>
 </dd>
