--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -4605,11 +4605,14 @@ textarea {
     width: 176px;
     margin: 0 12px 0 0;
 }
+.input-box .fake-select,
 .bulk-order-form .fake-select{
     position:relative;
     display:block;
 }
+.input-box select::-ms-expand,
 .bulk-order-form select::-ms-expand {display: none;}
+.input-box select,
 .bulk-order-form select{
     display:inline-block;
     border:1px solid #e4e4e4;
@@ -4622,7 +4625,7 @@ textarea {
     -webkit-border-radius:6px;
     -moz-border-radius:6px;
     appearance:none;
-    width:176px;
+    width:100%;
     position: relative;
     left: 0 !important;
     bottom: 0 !important;
@@ -4633,6 +4636,7 @@ textarea {
     color: #949494;
     border-radius: 0;
 }
+.input-box select{bottom: 2px !important;}
 .bulk-order-form .form-select-col input[type="text"]{
     border:1px solid #e4e4e4;
     padding:2px 3px 2px 5px;
@@ -4644,6 +4648,7 @@ textarea {
     border-radius: 0;
     background:#fff;
 }
+.input-box .fake-select:before,
 .bulk-order-form .fake-select:before{
     content:"";
     position:absolute;
@@ -5166,7 +5171,11 @@ div.fme-filter dd a{padding: 0 !important;}
     content: "";
     display: block;
 }
-
+dl:after{
+    display: block;
+    clear: both;
+    content: '';
+}
 
 
 
