--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -65,7 +65,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 									<?php } else if ($_filter->getVar() == 'universal_categories') {
 									?>
                                         <div class="cate-open-close">
-                                        Search By Design Categories<a id="currentvalue" class="opener" href="#">Select</a>
+                                        Search By Design Categories: <a id="currentvalue" class="opener" href="javascript:;">Select</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categorie(s): </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
                                     <?php }
@@ -106,7 +106,7 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 									<?php } else if ($_filter->getVar() == 'universal_categories') {
 									?>
                                         <div class="cate-open-close">
-                                        Search By Design Categories<a id="currentvalue" class="opener" href="#">Select</a>
+                                        Search By Design Categories: <a id="currentvalue" class="opener" href="javascript:;">Select</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
 										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?></ul></div>
 									<?php }
