--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5059,28 +5059,30 @@ textarea {
 }
 #fme_filters_list .cate-open-close .opener {
     display: inline-block;
-    vertical-align: top;
-    padding: 0 13px 0 7px;
+    vertical-align: middle;
+    padding: 0 18px 0 7px;
+    margin: 0 0 0 10px;
     position: relative;
     color: #222;
     text-transform: uppercase;
-    font: 14px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
+    font: 13px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
+    border: 1px solid #ccc;
+    width: 130px;
 }
 #fme_filters_list .cate-open-close.active .opener,
 #fme_filters_list .cate-open-close:hover .opener {
     text-decoration: none;
-    background: #f5f5f5;
 }
 #fme_filters_list .cate-open-close .opener:before {
-    font-family: 'fontello';
-    font-size: 8px;
-    line-height: 19px;
     width: 9px;
     height: 19px;
     position: absolute;
-    top: 2px;
-    right: 2px;
-    content: '\e812';
+    top: 8px;
+    right: 5px;
+    border-color: #888 transparent transparent;
+    border-style: solid;
+    border-width: 5px 4px 0;
+    content: '';
 }
 #fme_filters_list .cate-open-close ul:before {
     bottom: 100%;
@@ -5092,17 +5094,18 @@ textarea {
 }
 #fme_filters_list .cate-open-close:hover ul{display: block;}
 #fme_filters_list .cate-open-close ul {
-    margin: 0;
+    margin: -1px 0 0;
     padding: 0;
     list-style: none;
     background: #fff;
-    min-width: 99px;
-    text-align: center;
     position: absolute;
     text-transform: uppercase;
-    box-shadow: 0 1px 2px #ccc;
-    font: 10px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
+    border: 1px solid #ccc;
+    font: 13px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
     display: none;
+    left: auto;
+    right: 0;
+    width: 130px;
 }
 #fme_filters_list .cate-open-close .slide li{
     display: block;
@@ -5110,12 +5113,12 @@ textarea {
 }
 #fme_filters_list .cate-open-close li a {
     display: block;
-    color: #666;
-    padding: 5px 10px !important;
+    color: #222;
+    padding: 5px 7px !important;
+    border-top: 1px solid #ccc;
 }
+#fme_filters_list .cate-open-close li:first-child a{border: none;}
 #fme_filters_list .cate-open-close li a:hover {
-    color: #fff;
-    background: #000;
     text-decoration: none;
 }
 #fme_filters_list .styles-lable {
@@ -5378,5 +5381,5 @@ dl:after{
 .input-text.required-entry.validate-email.email {
 	box-shadow:none;
 }
-#fme_layered_universal_categories a[class*="_selected_"] {background: black !important; color: #fff !important;}
+/*#fme_layered_universal_categories a[class*="_selected_"] {background: black !important; color: #fff !important;}*/
 
