Select styling in Category page and product detail page

--- a/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
+++ b/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
@@ -143,3 +143,8 @@ $_swatches_height = (int) $_settings['swatch_height'];
 });
     </script>
 <?php endif; ?>
+<script>
+jQuery(document).ready(function(){
+    jQuery(':hidden').parents().find('span.fake-select').removeClass('fake-select');
+});
+</script>
