--- a/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
+++ b/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
@@ -15,7 +15,7 @@ $_swatches_height = (int) $_settings['swatch_height'];
         <?php if($_attribute["id"]=='154' or $_attribute["id"]=='157' or $_attribute["id"]=='151'){
           continue;
          }?>
-        <div class="attributeItem">
+        <div class="attributeItem custom-select">
             <dt id="label-attribute-<?php echo $_attribute["id"] ?>"><label class="required"><em>*</em><?php echo $_attribute["label"] ?></label><span class="selected-label">&nbsp;</span>   </dt>
             <dd class="option-container">
                 <?php
@@ -94,7 +94,7 @@ $_swatches_height = (int) $_settings['swatch_height'];
                     </select>
                     </span>
                 </div>
-                <div class="clearer">&nbsp;</div>
+                <!-- <div class="clearer">&nbsp;</div> -->
             </dd>
             </div>
         <?php endforeach; ?>
