--- a/app/design/frontend/creo/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view.phtml
@@ -110,7 +110,7 @@
 <?php /*?><?php if($_product->getSpecialPrice() > 0.0):?>
 <i class="old-price"><?php echo Mage::helper('core')->currency($_product->getSpecialPrice(), true, false); ?></i> 
 <?php endif;?>
-<?php echo $_formattedSpecialPrice = Mage::helper('core')->currency($_product->getFinalPrice(), true, false); ?><?php */?>
+<?php echo $_formattedSpecialPrice = Mage::helper('core')->currency($_product->getFinalPrice(), true, fals?>
 
 <?php echo $this->getPriceHtml($_product); ?>
 <?php echo $this->getChildHtml('bundle_prices') ?>
@@ -181,7 +181,7 @@
                       </div>
                       <?php endif; */ ?>
 
-                    <?php // j.work starts  ?>
+                    <?php // jawwad.nissar work starts  ?>
                     <div class="shipping-area"> 
                         <h4 st> Shipping Information  </h4>
                         <!--<a class="shipping-info" href="#">Shipping Information</a>-->
