wish list button on detail page

--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/review/totals.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/review/totals.phtml
@@ -21,8 +21,8 @@
 <?php endif;?>
 <?php if ($this->needDisplayBaseGrandtotal()):?>
 
-  <small><?php echo $this->helper('sales')->__('Your credit card will be charged for') ?></small></td>
- <small><?php echo $this->displayBaseGrandtotal() ?></small>
+  <small><?php //echo $this->helper('sales')->__('Your credit card will be charged for') ?></small></td>
+ <small><?php //echo $this->displayBaseGrandtotal() ?></small>
 
 <?php endif?>
 
