wishlist button updates

--- a/app/design/frontend/creo/default/template/catalog/product/view/addto.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view/addto.phtml
@@ -25,19 +25,24 @@
  */
 ?>
 
-<?php /*?><?php $_product = $this->getProduct(); ?>
+<?php ?><?php $_product = $this->getProduct(); ?>
 <?php $_wishlistSubmitUrl = $this->helper('wishlist')->getAddUrl($_product); ?>
 
 <ul class="add-to-links">
 <?php if ($this->helper('wishlist')->isAllow()) : ?>
-    <li><a href="<?php echo $_wishlistSubmitUrl ?>" onclick="productAddToCartForm.submitLight(this, this.href); return false;" class="link-wishlist"><?php echo $this->__('Add to Wishlist') ?></a></li>
+<!--    <li><a href="<?php //echo $_wishlistSubmitUrl ?>" onclick="productAddToCartForm.submitLight(this, this.href); return false;" class="link-wishlist"><?php //echo $this->__('Add to Wishlist') ?></a></li>
+-->    
+      <li><a href="<?php echo $_wishlistSubmitUrl ?>" onclick="productAddToCartForm.submitLight(this, this.href); return false;" class="link-wishlist"> <i class="icon-heart-empty"></i> <?php //echo $this->__('Add to Wishlist') ?></a></li>
+      <?php /*?><a class="link-wishlist" href="#"><i class="icon-heart-empty"></i></a><?php */?>
+
+    
 <?php endif; ?>
 <?php
-    $_compareUrl = $this->helper('catalog/product_compare')->getAddUrl($_product);
+    /*$_compareUrl = $this->helper('catalog/product_compare')->getAddUrl($_product);
 ?>
 <?php if($_compareUrl) : ?>
     <li><span class="separator">|</span> <a href="<?php echo $_compareUrl ?>" class="link-compare"><?php echo $this->__('Add to Compare') ?></a></li>
-<?php endif; ?>
+<?php endif; */?>
 
 </ul>
-<?php */?>
+<?php ?>
