--- a/app/design/frontend/base/default/template/chargepayment/form/creditcardpci.phtml
+++ b/app/design/frontend/base/default/template/chargepayment/form/creditcardpci.phtml
@@ -115,12 +115,14 @@
     </div>
 </div>   
 </div>
-    <div class="col-sm-4"> 
+    <div class="col-sm-4">
         <?php if ($this->hasSsCardType()): ?>
         <li id="<?php echo $_code ?>_cc_type_ss_div">
+            <div class="credit-card clearfix">
+            <div class="card-sctn-black"></div>
             <ul class="inner-form">
-                <li class="form-alt"><label for="<?php echo $_code ?>_cc_issue" class="required"><em>*</em><?php echo $this->__('Switch/Solo/Maestro Only') ?></label></li>
-                <li>
+                <!-- <li class="form-alt"><label for="<?php echo $_code ?>_cc_issue" class="required"><em>*</em><?php echo $this->__('Switch/Solo/Maestro Only') ?></label></li>-->
+                <li> 
                     <label for="<?php echo $_code ?>_cc_issue"><?php echo $this->__('Issue Number') ?>:</label>
                     <span class="input-box">
                         <input type="text" title="<?php echo $this->__('Issue Number') ?>" class="input-text validate-cc-ukss cvv" id="<?php echo $_code ?>_cc_issue" name="payment[cc_ss_issue]" value="" />
@@ -165,6 +167,7 @@
             SSChecked<?php echo $_code ?>();
             //]]>
             </script>
+        </div>
         </li>
     
         <?php endif; ?>
