Header icons and create your own navigation styling

--- a/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
+++ b/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
@@ -146,5 +146,6 @@ $_swatches_height = (int) $_settings['swatch_height'];
 <script>
 jQuery(document).ready(function(){
     jQuery(':hidden').closest('span.fake-select').removeClass('fake-select');
+    jQuery('.fake-select').closest('.attributeItem').addClass("fake-select-custom");
 });
 </script>
