--- a/app/design/frontend/creo/default/template/catalog/product/view - Copy.phtml
+++ b/app/design/frontend/creo/default/template/catalog/product/view - Copy.phtml
@@ -36,14 +36,7 @@
     var optionsPrice = new Product.OptionsPrice(<?php echo $this->getJsonConfig() ?>);</script>
 <div id="messages_product_view"><?php echo $this->getMessagesBlock()->toHtml() ?></div>
 <div class="row">
-
-<?php 
-
-if($_product->stock_item->is_in_stock == 0){
-	$outofstockclass = "outofstockclass ";
- } ?>
-
-    <div class=" <?php if(isset($outofstockclass)) {echo $outofstockclass ;} ?>product-detail col col-lg-12 col-md-12 col-sm-12 col-xs-12">
+    <div class="product-detail col col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <form action="<?php echo $this->getSubmitUrl($_product) ?>" method="post" id="product_addtocart_form"<?php if ($_product->getOptions()): ?> enctype="multipart/form-data"<?php endif; ?> validation_status="">
             <?php echo $this->getBlockHtml('formkey') ?>
             <div class="no-display">
