--- a/skin/frontend/creo/default/custom.css
+++ b/skin/frontend/creo/default/custom.css
@@ -1197,4 +1197,9 @@
    display: inline-block;
     width: 100%;
 }
+.customer-address-form select#country {
+    font-size: 11px !important;
+    height: 32px !important;
+ 
+}
 
