--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -3133,11 +3133,13 @@ div.fme-filter dd li{overflow: visible !important;}
     margin: 0 0 20px;
     border-width: 0 0 2px;
     border-style: solid;
-    border-color: #aeaeae;
+    border-color: #eee;
     text-align: left;
     text-transform: uppercase;
     color: #fff;
     font:bold 12px/20px "Roboto Condensed", Helvetica, Arial, sans-serif;
+	position: relative;
+	top: 7px;
 }
 .tab-content2 .dark-heading span{
     display: inline-block;
@@ -3174,7 +3176,7 @@ div.fme-filter dd li{overflow: visible !important;}
 }
 .tab-content2 .column-holder .column h4{
     margin: 0;
-    border-bottom: 2px solid #d7d7d7;
+    border-bottom: 2px solid #eee;
     text-transform: uppercase;
     color: #251709;
     font:bold 12px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
