--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -5286,18 +5286,9 @@ dl {margin: 0 0 10px;}
     float: none;
 }
 .cart-table thead tr,
-.cart-table tbody tr{position: relative;}
+.cart-table tbody tr{background: url("images/border-slice.png") repeat-x 0 100%;}
 
-.cart-table thead tr,
-.cart-table tbody tr:after {
-    background: url("images/border-slice.png") repeat-x;
-    bottom: 0;
-    content: "";
-    height: 1px;
-    left: 8px;
-    position: absolute;
-    right: 8px;
-}
+
 
 
 
