--- a/app/design/frontend/creo/default/template/newsletter/subscribe.phtml
+++ b/app/design/frontend/creo/default/template/newsletter/subscribe.phtml
@@ -93,8 +93,9 @@ $visitAttempt = $_SERVER['HTTP_REFERER'];
         var newsletterSubscriberFormDetail = new VarienForm('newsletter-validate-detail1');
     //]]>
     function checkcookie(){
-       jQuery(".modal-backdrop").fadeOut().removeClass("active");
-        jQuery(".modal_newsletter ").fadeOut().removeClass("active");
+       //jQuery(".modal-backdrop").fadeOut().removeClass("active");
+       // jQuery(".modal_newsletter ").fadeOut().removeClass("active");
+	   jQuery('.modal_newsletter').modal('hide');
         <?php Mage::getModel('core/cookie')->set('popup-shown', 'true', 1 * 365 * 24 * 60 * 60 , '/'); ?>
     }
     </script>
