--- a/skin/frontend/creo/default/style.css
+++ b/skin/frontend/creo/default/style.css
@@ -2584,6 +2584,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	text-transform: uppercase;
 	color: #000;
 	font:11px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
+	text-align: left;
 }
 
 .cart-table-area dl{
@@ -2592,7 +2593,7 @@ div.fme-filter dd li{overflow: visible !important;}
 	display: block;
 	color: #000;
 	font:9px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
-	float: right;
+	float: right !important;
 	width:73px;
 }
 .cart-table-area dl dt,
