OR issue on country change on checkout page

--- a/app/design/frontend/base/default/template/chargepayment/form/creditcardpci.phtml
+++ b/app/design/frontend/base/default/template/chargepayment/form/creditcardpci.phtml
@@ -150,7 +150,7 @@
                         </div>
                     </div>
                 </li>
-                <li class="adv-container">&nbsp;</li>
+                <li class="adv-container" style="margin: 0"></li>
             </ul>
             <script type="text/javascript">
             //<![CDATA[
