--- a/app/design/frontend/creo/default/template/onestepcheckout/onepage/payment/methods.phtml
+++ b/app/design/frontend/creo/default/template/onestepcheckout/onepage/payment/methods.phtml
@@ -14,7 +14,9 @@
 <div class="clearfix"> </div>
 <?php if ($html = $this->getPaymentMethodFormHtml($_method)): ?>
 <?php echo $html; ?>
+<?php if(sizeof($this->getMethods()) >= 2): ?>
 <div class="option-alternate"><strong>OR</strong></div>
+<?php endif; ?>
 <?php endif; ?>
 
 
