navigation menue fixed

--- a/app/design/frontend/creo/default/template/page/html/topmenu/renderer--.phtml
+++ b/app/design/frontend/creo/default/template/page/html/topmenu/renderer--.phtml
@@ -172,7 +172,6 @@
      $parent = Mage::getModel('catalog/category')->load($parentId);
  }
  }
- $currentUrl = Mage::helper('core/url')->getCurrentUrl()
  //$parentname = $this->getCurrentCategory()->getParentCategory()->getName(); echo $parentname."SHANI"; ?>
  <?php if (Mage::getSingleton('cms/page')->getIdentifier() == 'home' && Mage::app()->getFrontController()->getRequest()->getRouteName() == 'cms'
 ) {
@@ -183,7 +182,7 @@
 <?php
 }
 ?>
-<li <?php if (in_array("clothing",$parent_cat_array) || $_GET['id']==3) {
+<li <?php if (in_array("clothing",$parent_cat_array)) {
     echo'class="active"';
 } ?>> <a href="javascript:void(0)">CLOTHING</a>
     <div class="drop">
@@ -257,7 +256,7 @@ endforeach;
         </div>
     </div>
 </li>
-<li <?php if (in_array("accessories",$parent_cat_array) || $_GET['id']==5) {
+<li <?php if (in_array("accessories",$parent_cat_array)) {
                     echo'class="active"';
                 } ?>> <a href="javascript:void(0)">ACCESSORIES</a>
     <div class="drop"> 
@@ -304,7 +303,7 @@ endforeach;
 
     </div>
 </li>
-<li <?php if(in_array("caps",$parent_cat_array) || $_GET['id']==54) {
+<li <?php if(in_array("caps",$parent_cat_array)) {
                     echo'class="active"';
                 } ?>><a href="javascript:void(0)">CAPS</a>
     <div class="drop">
