case page custom select fixes

--- a/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
+++ b/app/design/frontend/creo/default/template/attributeswatches/catalog_product_view_type_options_configurable.phtml
@@ -145,6 +145,8 @@ $_swatches_height = (int) $_settings['swatch_height'];
 <?php endif; ?>
 <script>
 jQuery(document).ready(function(){
+    jQuery(':hidden').parent('span.fake-select').removeClass('fake-select');
+    //jQuery(':hidden').closest('span.fake-select').removeClass('fake-select');
     jQuery('.fake-select').closest('.attributeItem').addClass("fake-select-custom");
 });
 </script>
