--- a/app/design/frontend/creo/default/template/layerednav/layer.phtml
+++ b/app/design/frontend/creo/default/template/layerednav/layer.phtml
@@ -66,10 +66,11 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 									?>
                                         <span>Search By Design: </span>
                                         <div class="cate-open-close">
-                                        <a id="currentvalue" class="opener" href="javascript:;"> Categories</a>
+                                        <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categorie(s): </label> -->
-										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?>
-                                        <li><a class="fme_layered_clearall" style="font-size:14px" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('Categories') ?></a></li>
+										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">
+                                        <li><a class="fme_layered_clearall" style="" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('View All') ?></a></li>
+										<?php echo $_filter->getHtml() ?>
                                         </ul></div>
                                     <?php }
 								}else if($current_category_p_id != '57' || $current_category_p_id != '58'){
@@ -111,10 +112,12 @@ if ('front' != Mage::app()->getRequest()->getControllerName()) {
 									?>
                                         <span>Search By Design: </span>
                                         <div class="cate-open-close">
-                                        <a id="currentvalue" class="opener" href="javascript:;"> Categories</a>
+                                        <a id="currentvalue" class="opener" href="javascript:;"> View All</a>
 										<!-- <label style="float:left !important;right:0px !important" class="styles-lable" id="styles_label">Categories: </label> -->
-										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>"><?php echo $_filter->getHtml() ?>
-                                        <li><a class="fme_layered_clearall" style="font-size:14px" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('Categories') ?></a></li>
+										<ul class="slide" <?php echo $this->getHeightStyle() ?> id="fme_layered_<?php echo $_filter->getVar() ?>">            
+                                        <li><a class="fme_layered_clearall" style="" href="<?php echo $this->htmlEscape($this->getClearAllUrl()) ?>"><?php echo $this->__('View All') ?></a></li>
+										<?php echo $_filter->getHtml() ?>
+
                                         </ul></div>
 									<?php }
 									}
