--- a/app/design/frontend/creo/default/template/checkout/cart/item/configure/updatecart.phtml
+++ b/app/design/frontend/creo/default/template/checkout/cart/item/configure/updatecart.phtml
@@ -25,6 +25,15 @@
  */
 ?>
 
+<?php
+    $_isCustomizeProduct = false;
+    if(Mage::helper('core')->isModuleEnabled('MST_Pdp')) {
+        $designBtnObj = new MST_Pdp_Block_Designbutton();
+        if($designBtnObj->isDesignAble()) {
+            $_isCustomizeProduct = true;
+        }
+    }
+?>
 <?php $_product = $this->getProduct(); ?>
 <?php $buttonTitle = $this->__('Update Cart'); ?>
 <?php if ($_product->isSaleable()): ?>
@@ -45,7 +54,12 @@
     
         <?php endif; ?>
         <div class="add-to-cart-buttons">
+        <?php if($_isCustomizeProduct) : ?>
+            <button type="button" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="var ret = designYourOwnPopupValidation(); if(ret == false){return false;}else{PDC_Actions.saveDesignBeforeAddToCart(); /*productAddToCartForm.submit(this)*/}"><span class="span1"><span class="span2"><?php echo $buttonTitle ?></span></span></button>
+        <?php else : ?>
+        
             <button type="button" style="margin-top:10px;" title="<?php echo $buttonTitle ?>" class="button btn-cart" onclick="productAddToCartForm.submit(this)"><span><span><?php echo $buttonTitle ?></span></span></button>
+        <?php endif ?>
             <?php echo $this->getChildHtml('', true, true) ?>
         </div>
     </div>
