--- a/app/design/frontend/creo/default/template/page/html/footer.phtml
+++ b/app/design/frontend/creo/default/template/page/html/footer.phtml
@@ -36,7 +36,7 @@
 <!--								<form class="footer-form" action="#">
 									<span class="title">Join us for 20% off your first order</span>
 									<div class="form-row">
-										<input type="text" placeholder="Email Address">
+									nn	<input type="text" placeholder="Email Address">
 										<input type="submit" value="JOIN">
 									</div>
 								</form>-->
